# MOLEK-SYNTEZ-Solitaire-Solver

./: Cargo.toml  README.md
src/: cards.rs  main.rs  moves.rs
src/images/: d.pbm  eight.pbm  k.pbm  nine.pbm  seven.pbm  six.pbm  t.pbm  ten.pbm  v.pbm
