[package]
name = "tis_100_solitaire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image_ = { package = "image", optional = true, version = "0.23"}
lazy_static = { optional = true, version = "1.4"}
num_cpus = { optional = true, version = "*" }

[features]
default = ["image"]
image = ["image_", "lazy_static"]
thread = ["num_cpus"]
